<resources>
    <string name="app_name">E-Salba</string>
    <string name="e_salba_logo">E-Salba Logo</string>
    <string name="welcome">Welcome</string>
    <string name="tagline"><![CDATA[Sign up or login to view your household\'s electricity consumption.]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="back_button">Back</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="fullname">Full Name</string>
    <string name="contact_num">Contact Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_text">Device</string>
    <string name="electricity_text">Electricity</string>
    <string name="appliances">Appliances</string>
    <string name="enter">Enter</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="logout">Logout</string>
</resources>