<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/signupBack"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/signupTitle"
            android:layout_width="317dp"
            android:layout_height="41dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center_horizontal|center_vertical"
            android:letterSpacing="0.4"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/main_yellow"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupBack"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/inputLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupTitle"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/fullName"
                android:layout_width="315dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="name"
                android:background="@drawable/round_btn3"
                android:ems="10"
                android:fontFamily="@font/sourcesanspro_regular"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:paddingStart="25dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="2dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck"
                android:backgroundTint="@color/main_gray"/>

            <EditText
                android:id="@+id/age"
                android:layout_width="315dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="age"
                android:background="@drawable/round_btn_selected"
                android:ems="10"
                android:fontFamily="@font/sourcesanspro_regular"
                android:hint="@string/age"
                android:inputType="number"
                android:paddingStart="25dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="2dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck"
                android:backgroundTint="@color/main_gray"/>

            <EditText
                android:id="@+id/contactNum"
                android:layout_width="315dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="age"
                android:background="@drawable/round_btn_selected"
                android:ems="10"
                android:fontFamily="@font/sourcesanspro_regular"
                android:hint="@string/contact_num"
                android:inputType="number"
                android:paddingStart="25dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="2dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck"
                android:backgroundTint="@color/main_gray"/>

            <EditText
                android:id="@+id/signupEmail"
                android:layout_width="315dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/round_btn_selected"
                android:ems="10"
                android:fontFamily="@font/sourcesanspro_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="25dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="2dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck"
                android:backgroundTint="@color/main_gray"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="315dp"
                android:layout_height="50dp"
                android:ems="10"
                android:fontFamily="@font/sourcesanspro_regular"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupPass"
                    android:layout_width="315dp"
                    android:layout_height="50dp"
                    android:background="@drawable/round_btn3"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="25dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck"
                    android:backgroundTint="@color/main_gray"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="315dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/round_btn3"
                android:elevation="5dp"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingTop="2dp"
                android:paddingRight="16dp"
                android:paddingBottom="2dp"
                android:stateListAnimator="@null"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="@color/main_yellow"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.453" />

        <TextView
            android:id="@+id/dummyText"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@+id/inputLinear"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
